[gd_scene load_steps=2 format=3 uid="uid://c5fc08jqgyusr"]

[ext_resource type="Script" path="res://Scripts/PhaseUI.gd" id="1_vxvlf"]

[node name="PhaseUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_vxvlf")

[node name="PhaseLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 47.0
offset_bottom = 23.0

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 2.0
offset_right = 100.0
offset_bottom = 25.0

[node name="ReadyButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 34.0
offset_right = 49.0
offset_bottom = 65.0
text = "boop"
